--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -102,7 +102,7 @@ import { Image } from "astro:assets";
                     stroke-width="2"
                     d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
                 </svg>
-                123 Tech Street, San Francisco, CA 94107
+                San Mateo County, CA
               </div>
               <div class="flex items-center">
                 <svg
@@ -119,7 +119,7 @@ import { Image } from "astro:assets";
                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
                   ></path>
                 </svg>
-                +1 (555) 123-4567
+                +1 (650) 123-4567
               </div>
               <div class="flex items-center">
                 <svg
