--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -79,7 +79,7 @@ import { Image } from "astro:assets";
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="/" class="nav-link text-gray-800 hover:text-pink-300 px-3 py-2 text-sm font-medium">Home</a>
                     <a href="/about/" class="nav-link text-gray-800 hover:text-pink-300 px-3 py-2 text-sm font-medium">About</a>
-                    <a href="/client/" class="nav-link text-gray-800 hover:text-pink-300 px-3 py-2 text-sm font-medium">Clients</a>
+                    <a href="#happy-clients" class="nav-link text-gray-800 hover:text-pink-300 px-3 py-2 text-sm font-medium">Clients</a>
                     <a href="/services/" class="nav-link text-gray-800 hover:text-pink-300 px-3 py-2 text-sm font-medium">Services</a>
                     <!-- <a href="/contact/" class="nav-link text-gray-800 hover:text-pink-200 px-3 py-2 text-sm font-medium">Contact</a> -->
                     
