--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -168,7 +168,7 @@ import { Image } from "astro:assets";
         <!-- Copyright Section -->
         <div class="border-t border-yellow-400 mt-12 pt-6">
           <div class="flex flex-col md:flex-row justify-between items-center">
-            <p class="text-gray-400 text-center md:text-left text-sm">
+            <p class="text-yellow-200 text-center md:text-left text-sm">
               © 2025 Sunnyside Dog Daycare Name| All rights reserved.
             </p>
             <!-- <div class="mt-4 md:mt-0 flex space-x-6">
@@ -176,7 +176,7 @@ import { Image } from "astro:assets";
                         <a href="#" class="text-gray-400 hover:text-white text-sm">Terms of Service</a>
                         <a href="#" class="text-gray-400 hover:text-white text-sm">Sitemap</a>
                     </div> -->
-            <p>"Paws-itively the best care!”</p>
+            <p class="text-yellow-200">"Paws-itively the best care!”</p>
           </div>
         </div>
       </div>
